--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,25 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+# Disabling the swagger-ui
+#springdoc.swagger-ui.enabled=false
+springdoc.default-produces-media-type= application/json
+
+#springdoc:
+#version: '@springdoc.version@'
+#api-docs:
+#enabled: true
+#path: /v3/api-docs
+#swagger-ui:
+#path: /swagger-ui.html
+
+springdoc.swagger-ui.version= '@springdoc.version@'
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+
+
 
 #Loggers
 #logging.file.name=logs/app.log
@@ -80,6 +99,5 @@ server.tomcat.relaxed-path-chars=|,{,},[,]
 
 spring.main.allow-bean-definition-overriding=true
 
-springdoc.api-docs.path=/api-docs
 
 
