--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+		
+			    <plugin>
+			      <groupId>com.heroku.sdk</groupId>
+			      <artifactId>heroku-maven-plugin</artifactId>
+			      <version>3.0.3</version>
+			      <configuration>
+				<appName>statistics</appName>
+			      </configuration>
+			    </plugin>
+			 
 		</plugins>
 	</build>
 
