--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,30 @@
 #Documentation de toutes les propri?t?s
 # https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
-
-
 #configuration du port d'?coute du serveur Tomcat
 server.port=9393
-
 #configuration de la datasource
 spring.sql.init.mode=always
-
-
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.driver-class-name=${SPRING.DATASOURCE.DRIVER-CLASS-NAME}
-
 spring.datasource.url=jdbc:mariadb://localhost:3309/statistic?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC 
 #spring.datasource.url=${SPRING_DATASOURCE_URL}
-
 spring.datasource.username=root
 spring.datasource.password=
-
 #config de JPA/Hibernate
 #dialect : classe permettant de traduire les req JP-QL vers le SQL sp?cifique au SGBD utilis
 spring.jpa.properties.hibernate.dialect=com.basket.statistics.dialect.MariaDBDialect
 #spring.jpa.properties.hibernate.dialect=${SPRING.JPA.PROPERTIES.HIBERNATE.DIALECT}
-
 #Stratgie utilise pour gnrer les tables en Bdd
 spring.jpa.hibernate.ddl-auto=update
-
-
 #config des logs
 #TODO : mettre  false en production
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
-
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # Disabling the swagger-ui
 #springdoc.swagger-ui.enabled=false
-springdoc.default-produces-media-type= application/json
-
+springdoc.default-produces-media-type=application/json
 #springdoc:
 #version: '@springdoc.version@'
 #api-docs:
@@ -45,13 +32,9 @@ springdoc.default-produces-media-type= application/json
 #path: /v3/api-docs
 #swagger-ui:
 #path: /swagger-ui.html
-
-springdoc.swagger-ui.version= '@springdoc.version@'
+springdoc.swagger-ui.version='@springdoc.version@'
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
-
-
-
 #Loggers
 #logging.file.name=logs/app.log
 #logging.pattern.rolling-file-name=logs/app-%d{yyyy-MM-dd}.%i.log
@@ -70,33 +53,22 @@ springdoc.api-docs.path=/v3/api-docs
 #logging.level.org.hibernate.jdbc=info
 #logging.level.org.hibernate.transaction=info
 #logging.level.org.hibernate.cache=info
-
-
 #actuator
 #management.server.port=8086
 #management.endpoints.web.exposure.include=*
-
 #app.storagefolder=./src/main/resources/files/
 #app.storagefolder=${APPLICATION_STORAGE_VOLUME}
-
 jwt.secret=348a74f7-c8a7-415b-a2f6-57d0fd84fff6
 jwt.get.token.uri=/connexion
-
-
 #frontapp.url=http://www.enrecherche.com
 frontapp.url=http://localhost:4200
 backapp.url=http://localhost:9393
-
-
 #File weight
 app.fichierstockage=C:/reception
-
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.tomcat.relaxed-query-chars=|,{,},[,]
 server.tomcat.relaxed-path-chars=|,{,},[,]
-
-
 spring.main.allow-bean-definition-overriding=true
 
 
