--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,4 +72,13 @@ server.tomcat.relaxed-path-chars=|,{,},[,]
 spring.main.allow-bean-definition-overriding=true
 
 
+#support de java.time dans freemarker templates
+spring.freemarker.settings.object_wrapper=no.api.freemarker.java8.Java8ObjectWrapper(Configuration.VERSION_2_3_30)
+
+
+backend.url=http://localhost:9393
+
+app.storagefolder=C:/tempBidon
+
+
 
